--- a/ATE_text_only_short_Intro.tex
+++ b/ATE_text_only_short_Intro.tex
@@ -24,7 +24,7 @@
 \usepackage[margin=1in]{geometry}
 \usepackage{hyperref}
 \hypersetup{unicode=true,
-            pdftitle={The Human-Neandertal admixture time estimated from present-day human genomes is compatible with a multitude of durations},
+            pdftitle={The dating of the Human-Neandertal introgression event estimated from present-day human genomes is compatible with a multitude of admixture durations},
             pdfauthor={Leonardo Nicola Martin Iasi (Max Planck Institute for Evolutionary Anthropology, MPI EVA), Dr.~Benjamin Marco Peter (MPI EVA, benjamin\_peter@eva.mpg.de)},
             pdfborder={0 0 0},
             breaklinks=true}
@@ -76,7 +76,7 @@
 
 \setlength{\droptitle}{-2em}
 
-  \title{The Human-Neandertal admixture time estimated from present-day human genomes is compatible with a multitude of durations}
+  \title{The dating of the Human-Neandertal introgression event estimated from present-day human genomes is compatible with a multitude of admixture durations}
     \pretitle{\vspace{\droptitle}\centering\huge}
   \posttitle{\par}
     \author{Leonardo Nicola Martin Iasi (Max Planck Institute for Evolutionary
@@ -696,38 +696,44 @@ continuous admixture always resulted in the Lomax having a lower AIC.
 \caption{\label{fig:fig4} Parameter estimate for different sampling and
 admixture duration times using different methods for assigning genetic
 length A) Mean time estimates from the pulse model fit of different gene
-flow length all sampled 50 generations after the gene flow enden. B)
-Lomax duration estimat of the scenario C) Mean time estimates from the
+flow length all sampled 50 generations after the gene flow ended. B)
+Lomax duration estimate of the scenario C) Mean time estimates from the
 pulse model fit of different sampling times after the end of 800
-generations of gene flow. D) Lomax duration estimat of the scenario}
+generations of gene flow. D) Lomax duration estimate of the scenario}
 \end{figure}
 
 \begin{figure}
 \centering
 \includegraphics{Admixture_Time_Inference_Paper_Draft_files/figure-latex/fig5-1.pdf}
-\caption{\label{fig:fig5} Different admixure duration models ranging
+\caption{\label{fig:fig5} Different admixture duration models ranging
 from a one generation pulse tu 2500 generations for Neandertal admixture
 duration using all 1k Genome CEU individuals as the admixed population
-with all YRI and 3 high coverage Neandertals as reference populations.}
+with all YRI and 3 high coverage Neandertals as reference populations. A) Weighted LD normal scaled B) Weighted LD log scaled.}
 \end{figure}
 
 \section{Discussion}\label{discussion}
 
 Archaeological evidence suggests that Neandertals and modern human populations overlapped in some regions for
 a long period of time \citep{higham_timing_2014}, potentially resulting
-in continuous admixture over hundreds of generations. However, estimates for the time of this admixture only assumed a one-generation pulse. In this study we were interested in the effect of this assumption and to relax it. We established that even for very long continuous admixture scenarios, estimates for the mean time are compatible with a pulse like admixture. Although, reliable estimates can be obtained, they intern do not hold any information on the boundaries of a potential continuous admixture scenario. This however could be highly informative about the first contact between humans and Neandertals and the time of Neandertal extinction.
+in continuous admixture over hundreds of generations. However, estimates for the time of Neandertal-Human admixture usually assumes only a one-generation pulse. In this study we were interested in the effect of this assumption and to relax it. We established that even for very long continuous admixture scenarios, estimates for the mean time are compatible with a pulse like admixture and the error in the estimates is out weighted by all other tested model parameters.  Although, reliable estimates can be obtained, they in turn do not hold any information on the boundaries of a potential continuous admixture scenario. This however could be highly informative about the first contact between humans and Neandertals and the potential time of Neandertal extinction.
 
-We established that assuming a constant recombination rate will lead to sever underestimations of admixture times, whereas the other parameters tested (demography and analysis parameters) are far less influential. We could obtain admixture durations modeling the ALD using a Lomax distribution under ideal circumstances, where we exactly know the genetic distance between introgressed SNPs and the recombination process is constant. Relaxation of the latter assumption while still knowing the exact genetic distance lead to high uncertainty in the estimates. Crucially we could show that ther is no power to detect admixture durations even for long admixture scenarios under ideal circumstances if the event is to long ago. 
+We tested the influence of different parameter scenarios on the admixture mean time estimates.
+We established that assuming a constant recombination rate will lead to sever underestimations of admixture times, whereas the other parameters tested (demography and analysis parameters) are far less influential. Although this bias is known from previous studies, we notice it is underappreciated that reliable mean time estimates can only be obtained using population specific recombination maps, especially for archaic admixture events. Using the information on influencing parameters, we could obtain admixture durations modeling the ALD using a Lomax distribution under ideal circumstances, where we exactly know the genetic distance between introgressed SNPs and the recombination process is constant. Relaxation of the latter assumption while still knowing the exact population specific recombination map  leads to  uncertainty in the estimates. This uncertainty depend on the duration and time of sampling from the end of the admixture. Crucially we could show that there is no power to correctly infer admixture durations even for long admixture scenarios under ideal circumstances if the event is to long ago. Likewise, reliable distinction between a pulse like admixture model and a multi-generation continuous model for Human-Neandertal admixture scenarios is not definite. We demonstrated that a multitude of different duration scenarios are compatible for the Human-Neandertal admixture estimated from  present-day non-Africans genomes. Hence, we conclude that using present day non-African human genomes for inference is not conclusive to resolve the duration of Neandertal admixture. As a consequence we could neither obtain genetic indications of the first contact between Humans and Neandertals nor for the time of potential Neandertal extinction.
+
+However, there are some ways to infer admixture event across time. Population differentiation between different introgressing archaic populations is a strong indicator for multi-generation admixture as shown in \cite{browning_analysis_2018}. Although not distinguishable by deconvoluting the length distribution of the archaic segments in the present-day East-Asian individuals to infer the time, the genetic differentiation between the segments with its implication of coming from different sources is unlikely to happen at the exact same time. Another possibility is using ancient DNA from admixed individuals to sample closer from the end of the admixture event. This could potentially help in either deconvolute discrete admixture pulses, which has the disadvantage of fitting multiple parameters or using our suggested approach on the ancient data. With a sufficient amount of ancient DNA samples from the same time period one could infer a recombination map. With that our study suggest that it would be possible to estimate a potential multi-generation admixture duration. One could also think of combining both ideas. Allocate introgressed segments from ancient DNA samples into different ancestry clusters according to their genetic differentiation and separately inferring mean and duration of the admixture time on each ancestry cluster. 
 
 Conclusions:
 
 \begin{itemize}
-    \item The mean time of gene flow can be reliably estimated with a pulse model even if the gene flow is actually continuous.
-  \item Technical model variables (ascertainment scheme, minimal distance, demography and recombination map) outweigh the effect of continuous gene flow.
-  \item The Lomax model is under powered to inferring continuous admixture for parameters relevant for Neandertal admixture.
-  \item Estimating the the mean time and especially the duration of gene flow is only possible with a highly precise genetic map.
-  \item The signal of continuous gene flow is hard to detect if the gene flow is not long enough or to far in the past.
-  \item Reliably distinguishing the models is difficult.
+    \item The mean time of gene flow can be reliably estimated with a pulse model even if the gene flow is actually continuous. (check)
+  \item Technical model variables (ascertainment scheme, minimal distance, demography and recombination map) outweigh the effect of continuous gene flow. (check)
+  \item The Lomax model is under powered to inferring continuous admixture for parameters relevant for Neandertal admixture. (check)
+  \item Estimating  the mean time and especially the duration of gene flow is only possible with a highly precise genetic map. (check)
+  \item The signal of continuous gene flow is hard to detect if the gene flow is not long enough or to far in the past. (check)
+  \item Reliably distinguishing the models is difficult. (check)
+  \item Population differentiation can help identifying different admixture events across time (e.g. Browning et al. 2018)
+  \item sampling close to the end of the admixture e.g. using ancient genomes and using a accurate recombination map enables the inference of admixture duration 
+  
 \end{itemize}
 
 \hypertarget{refs}{}
@@ -744,12 +750,13 @@ Conclusions:
 \begin{figure}
 \centering
 \includegraphics{Admixture_Time_Inference_Paper_Draft_files/figure-latex/figS1-1.pdf}
-\caption{\label{fig:figS1}Comparison of the bias on the admixture time
-estimates in generations between all combinations the parameters:
-ascertainment scheme = LES/HES, \(d_{0}\) = 0.02/0.05 cM, demography =
-simple/complex, recombination = constant/variable and the gene flow
-model = pulse/continuous. Dotted horizontal line indicates unbiased
-admixture estimates.}
+\caption{\label{fig:figS1}The two tested demographies of humans splitting into African population (AFR) and non-African (non-AFR) with admixture from Neandertals (NEA) into non-Africans. The simple demographic model with constant population sizes and the complex with rapid population size changes (1), substructure in Africa, where after an initial earlier split and isolation the structured population exchange migrants till the out-of-Africa event (2) and additional gene flow between Africans and non-Africans after the Neandertal admixture (3).}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics{Admixture_Time_Inference_Paper_Draft_files/figure-latex/figS2-1.pdf}
+\caption{\label{fig:figS2} Comparison of the standardized difference between true and estimated admixture time for all combinations of parameters: ascertainment scheme = LES/HES,  $d_{0}$ = 0.02/0.05 cM, demography = simple/complex, recombination = constant/variable and the gene flow model = pulse/continuous, with 100 replicates respectively. Dotted line represents the model prediction with the 5.5 \% and 94.5 \% compatibility intervals solid lines. Dotted horizontal line indicates no difference between true and estimated time.}
 \end{figure}
 
 \begin{table}[h]
@@ -778,8 +785,11 @@ sigma & 0.46 & 0.01 & 0.45 & 0.47 & 2538.23 & 1\\
 
 \begin{figure}
 \centering
-\includegraphics{Admixture_Time_Inference_Paper_Draft_files/figure-latex/figS2-1.pdf}
-\caption{\label{fig:figS2} Lomax estimates for the mean time.}
+\includegraphics{Admixture_Time_Inference_Paper_Draft_files/figure-latex/figS3-1.pdf}
+\caption{\label{fig:figS2} Comparison of mean time estimates between the Exponential and Lomax model A) Mean time estimates of the Exponential model fit for different 
+admixture durations all sampled 50 generations after the admixture ended. B)
+Lomax mean time estimate for the same scenario C) Mean time estimates of the Exponential model fit for different sampling times after the end of 800
+generations of continuous admixture. D) Lomax mean time estimate for the same scenario}
 \end{figure}
 
 
